# MBABenchV2

./: .env.example  .gitignore  README.md  estimate_task_times.py  ingest_tasks.py  pyproject.toml  requirements.txt
gui-agents-master/: .env.example  .gitignore  .pre-commit-config.yaml  HANDOFF_v9.md  README.md  claude_web_batch_runner.py  pyproject.toml  requirements.txt
gui-agents-master/claude_web_agent/: README.md  __init__.py  browser_manager.py  chatgpt_web_agent.py  claude_web_agent.py  claude_web_engine.py  completion_logger.py  file_validator.py  task_status.py  web_agent.py
gui-agents-master/docs/: ARCHITECTURE.md  generate_architecture_diagram.py
gui-agents-master/infra/: README.md  plan.md  run.py
gui-agents-master/infra/configs/: __init__.py  agent_identity.py  configs.default.yaml  loader.py
gui-agents-master/infra/dispatcher/: __init__.py  _reset_dispatcher_status.sh  aws_bootstrap.sh  boxes.py  common_commands.md  diagnostics.py  dispatch.py  spinup.sh  teardown.sh
gui-agents-master/infra/example_scripts/: run_sample_chatgpt.sh  run_sample_claude.sh  run_sample_mbabenchv2.sh
gui-agents-master/infra/worker/: __init__.py  auth_probe.py  chrome_launcher.py  queue_cli.py  state.py  worker_loop.py
gui-agents-master/task_io/: __init__.py  base.py  registry.py
gui-agents-master/task_io/sinks/: local_sink.py  postgres_s3.py
gui-agents-master/task_io/sources/: postgres_s3.py  yaml_source.py
gui-agents-master/tasks_configs/: template_chatgpt_e2e.yaml  template_chatgpt_web.yaml  template_claude_web.yaml  test_chatgpt_e2e.yaml
setup/: setup.sh  (+1 more)
(+37 files in other folders)
